PharmaDemo/src/objects/SFDC_Expense_Line_Item__c.object
<CustomObject>
    <description>Each line item can be recorded.</description>
    <fields>
        <fullName>Airline_Ticket_Number__c</fullName>
        <label>Airline Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <picklist>
            <controllingField>Expenditure_Type__c</controllingField>
            <picklistValues>
                <fullName>Air Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Airways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Atlantic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c *  Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Rental__c</fullName>
        <label>Car Rental</label>
        <picklist>
            <controllingField>Expenditure_Type__c</controllingField>
            <picklistValues>
                <fullName>Alamo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hertz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrifty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description/Comment/Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exp_Line_Item__c</fullName>
        <label>Expense Line Item #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas-Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Header__c</fullName>
        <label>Expense Report</label>
        <referenceTo>SFDC_Expense_Header__c</referenceTo>
        <relationshipName>R00Nj0000003oDKZEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Item_Counter__c</fullName>
        <formula>+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <formula>IF(  ISPICKVAL( Expenditure_Type__c, &quot;Mileage&quot;), 0.405, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>If mileage enter the number of miles travelled (include return trip as appropriate), for all other claims enter the actual expenditure in £</inlineHelpText>
        <label>Distance/Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>EXP-LN-ITM {0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>